--- a/packages/zwave.yaml
+++ b/packages/zwave.yaml
@@ -22,14 +22,14 @@ zwave:
   device_config_domain:
     light:
       refresh_value: true
-#      polling_intensity: 1
-#      delay: 3
+      polling_intensity: 1
+      delay: 3
 
     lock:
-      polling_intensity: 1
+      polling_intensity: 2
 
-    switch:
-      polling_intensity: 1
+#    switch:
+#      polling_intensity: 1
 
   ################################################
   ## Global Config
